[package]
name = "nucleoid-persistence-backend"
version = "0.1.0"
authors = ["Tom_The_Geek <tomthegeek.8559@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.7", features = ["full"] }
warp = "0.3"

xtra = { version = "0.5", features = ["with-tokio-1"] }

uuid = { version = "0.8", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

rand = "0.8"

thiserror = "1.0"
anyhow = "1.0"
log = "0.4"
env_logger = "0.8"

mongodb = { version = "2.0.0-beta.1", features = ["bson-uuid-0_8"] }
bson = { version = "2.0.0-beta.1", features = ["uuid-0_8"] }

futures = "0.3"
async-trait = "0.1"
